--- a/connexion.html
+++ b/connexion.html
@@ -28,7 +28,7 @@
     <div class="container rounded-container">
         <div class="row justify-content-center">
             <div class="col-md-6">
-                <h2 class="text-center mb-4">Formulaire de Connexion</h2>
+                <h2 class="text-center mb-4">Connexion administrateur</h2>
                 <form>
                     <div class="form-group">
                         <label for="login">Nom d'utilisateur</label>
